k8s/infra/controllers/argocd/grpc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-server-grpc
  namespace: argocd
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: argocd
    app.kubernetes.io/name: argocd-server
  ports:
    - name: grpc
      port: 80
      protocol: TCP
      appProtocol: kubernetes.io/h2c
      targetPort: 8080
