k8s/infra/controllers/argocd/grpc-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  parentRefs:
    - { name: internal, namespace: gateway }
  hostnames: [ "argocd.stonegarden.dev" ]
  rules:
    - backendRefs: [ { name: argocd-server-grpc, port: 80 } ]
      matches:
        - headers: [ { name: Content-Type, value: application/grpc } ]
