k8s/infra/controllers/argocd/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  parentRefs:
    - { name: internal, namespace: gateway }
  hostnames: [ "argocd.stonegarden.dev" ]
  rules:
    - backendRefs: [ { name: argocd-server, port: 80 } ]
      matches:
        - path: { type: PathPrefix, value: / }
