k8s/infra/controllers/argocd/tls-route.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  parentRefs:
    - { name: internal, namespace: gateway }
  hostnames: [ argocd.stonegarden.dev ]
  rules:
    - backendRefs: [ { name: argocd-server, port: 443 } ]
